deploy/yc-sirius/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: edu-loving-euclid
  labels:
    app.kubernetes.io/name: django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: django-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django-app
    spec:
      containers:
        - name: django
          image: zakharterekhov/django-app:f2c64fc
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: django-volume
              mountPath: "/opt/.postgresql"
          ports:
            - containerPort: 80
      volumes:
        - name: django-volume
          secret:
            secretName: db-ssl-certificate
            defaultMode: 384
