deploy/yc-sirius/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: edu-loving-euclid
spec:
  rules:
    - host: edu-loving-euclid.sirius-k8s.dvmn.org
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: django-service
              port:
                name: http
